fix nested markdown edge cases and webhook reply formatting regression
Co-authored-by: Xujiayao <58985541+Xujiayao@users.noreply.github.com>